# qwen3-asr-mlx-runtime

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
docs/: architecture.md  development.md  evaluation.md  performance.md  protocol.md  submodule.md
docs/blog/: qwen3-asr-mlx-runtime-realtime-transcription-mac.md
examples/node/: bridge.mjs
examples/python/: client.py
examples/swift/: SubprocessBridge.swift
qwen3_asr_mlx_runtime/: __init__.py  __main__.py  bridge.py  perftest.py  runtime.py  score.py
scripts/: download-eval-dataset  export-chime6-clips  qwen3-asr-mlx-bridge  qwen3-asr-mlx-perftest  qwen3-asr-mlx-score
tests/: test_capabilities.py
