[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "qwen3-asr-mlx-runtime"
version = "0.1.0"
description = "Apple Silicon MLX runtime and JSONL bridge for Qwen3-ASR."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "Qwen3-ASR MLX Runtime contributors" }
]
keywords = ["qwen3", "asr", "mlx", "apple-silicon", "speech-recognition"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "mlx",
  "mlx-lm",
  "transformers==4.57.6",
  "safetensors",
  "huggingface_hub[cli]",
  "soundfile",
  "librosa",
  "numpy",
  "qwen-asr",
]

[project.urls]
Homepage = "https://github.com/YOUR_ORG/qwen3-asr-mlx-runtime"
Issues = "https://github.com/YOUR_ORG/qwen3-asr-mlx-runtime/issues"
Source = "https://github.com/YOUR_ORG/qwen3-asr-mlx-runtime"

[project.scripts]
qwen3-asr-mlx-bridge = "qwen3_asr_mlx_runtime.bridge:main"

[tool.hatch.build.targets.wheel]
packages = ["qwen3_asr_mlx_runtime"]
