[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "qwen3-asr-mlx-runtime"
version = "0.1.0"
description = "Apple Silicon MLX runtime and JSONL bridge for Qwen3-ASR."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "Qwen3-ASR MLX Runtime contributors" }
]
keywords = ["qwen3", "asr", "mlx", "apple-silicon", "speech-recognition"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "mlx==0.31.2",
  "mlx-lm==0.29.1",
  "transformers==4.57.6",
  "safetensors==0.8.0",
  "huggingface_hub[cli]==0.36.2",
  "soundfile==0.14.0",
  "librosa==0.11.0",
  "numpy==2.4.6",
  "numba==0.65.1",
  "llvmlite==0.47.0",
  "qwen-asr==0.0.6",
]

[project.urls]
Homepage = "https://github.com/drguptavivek/qwen3-asr-mlx-runtime"
Issues = "https://github.com/drguptavivek/qwen3-asr-mlx-runtime/issues"
Source = "https://github.com/drguptavivek/qwen3-asr-mlx-runtime"

[project.scripts]
qwen3-asr-mlx-bridge = "qwen3_asr_mlx_runtime.bridge:main"
qwen3-asr-mlx-perftest = "qwen3_asr_mlx_runtime.perftest:main"

[tool.hatch.build.targets.wheel]
packages = ["qwen3_asr_mlx_runtime"]
